--- a/home.html
+++ b/home.html
@@ -18,7 +18,13 @@
             </div>
             <div class="menu">
                 <nav class="navigacion">
-                    <ul class="lista">
+                    <div class="image-area">
+                        <img class="menu-opener btmenu_open" src="assets/images/menu.png" />
+                    </div>
+                    <ul  id="lista" class="lista">
+                        <div class="image-area" >
+                            <img class="menu-opener btmenu_close" src="assets/images/menu.png" />
+                        </div>
                         <li class="menu-item"><a href="" class="menu-item--action">Home</a></li>
                         <li class="menu-item"><a href="" class="menu-item--action">About US</a></li>
                         <li class="menu-item"><a href="" class="menu-item--action"> Services</a></li>
@@ -33,6 +39,20 @@
             </div>
         </div>
     </header>
-    
+    <!--parte do menu-->
+    <main>
+        <!--parte do banner-->
+        <section class="banner">
+            <div class="sliders">
+
+            </div>
+        </section>
+    </main>
+    </body>
+    <footer>
+
+    </footer>
+    <script src="assets/js/script.js"></script>
+    </body>
 </body>
 </html>
