animacao do banner concluida

--- a/home.html
+++ b/home.html
@@ -39,19 +39,44 @@
             </div>
         </div>
     </header>
+
     <!--parte do menu-->
     <main>
         <!--parte do banner-->
         <section class="banner">
-            <div class="sliders">
+            <div class="slide">
+                <div class="slides">
 
+
+                    <div  id="voltar" class="btn">
+                        <i class="fas fa-chevron-left"> &larr;</i>
+                    </div>
+                    <div id="next" class="btn">
+                        <i class="fas fa-chevron-right">&rarr;</i>
+                    </div>
+                    <div id="atual" class="image" >
+                        <div class="image-area1"></div>
+                    </div>
+                    <div id="atual" class="image" >
+                        <div class="image-area2"></div>
+                    </div>
+                    <div id="atual" class="image" >
+                        <div class="image-area3"></div>
+                    </div>
+                    <div id="atual" class="image" >
+                        <div class="image-area4"></div>
+                    </div>
+                </div>
+                <div class="balls">
+                    
+                </div>
             </div>
         </section>
     </main>
-    </body>
     <footer>
-
     </footer>
+    </body>
+    
     <script src="assets/js/script.js"></script>
     </body>
 </body>
