Parte do Banner completo

--- a/home.html
+++ b/home.html
@@ -19,11 +19,11 @@
             <div class="menu">
                 <nav class="navigacion">
                     <div class="image-area">
-                        <img class="menu-opener btmenu_open" src="assets/images/menu.png" />
+                        <img class="menu-opener btmenu_open" src="assets/images/desktop/menu.png" />
                     </div>
                     <ul  id="lista" class="lista">
                         <div class="image-area" >
-                            <img class="menu-opener btmenu_close" src="assets/images/menu.png" />
+                            <img class="menu-opener btmenu_close" src="assets/images/desktop/menu.png" />
                         </div>
                         <li class="menu-item"><a href="" class="menu-item--action">Home</a></li>
                         <li class="menu-item"><a href="" class="menu-item--action">About US</a></li>
@@ -55,16 +55,36 @@
                         <i class="fas fa-chevron-right">&rarr;</i>
                     </div>
                     <div id="atual" class="image" >
-                        <div class="image-area1"></div>
+                        <div class="image-area1">
+                            <div class="slide--image-area">
+                                <h1>Nintendo Switch is</br><span>Technology</span></h1>
+                                <a href="" class="button">try it now!</a>
+                            </div>
+                        </div>
                     </div>
                     <div id="atual" class="image" >
-                        <div class="image-area2"></div>
+                        <div class="image-area2">
+                            <div class="slide--image-area">
+                                <h1>Nintendo Switch is</br><span>Diversion</span></h1>
+                                <a href="" class="button">try it now!</a>
+                            </div>
+                        </div>
                     </div>
                     <div id="atual" class="image" >
-                        <div class="image-area3"></div>
+                        <div class="image-area3">
+                            <div class="slide--image-area">
+                                <h1>Nintendo Switch is</br><span>Nostalgia</span></h1>
+                                <a href="" class="button">try it now!</a>
+                            </div>
+                        </div>
                     </div>
                     <div id="atual" class="image" >
-                        <div class="image-area4"></div>
+                        <div class="image-area4">
+                            <div class="slide--image-area">
+                                <h1>Nintendo Switch is</br><span>Portability</span></h1>
+                                <a href="" class="button">try it now!</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="balls">
