Parte do About Us iniciado

--- a/home.html
+++ b/home.html
@@ -46,8 +46,6 @@
         <section class="banner">
             <div class="slide">
                 <div class="slides">
-
-
                     <div  id="voltar" class="btn">
                         <i class="fas fa-chevron-left"> &larr;</i>
                     </div>
@@ -88,8 +86,23 @@
                     </div>
                 </div>
                 <div class="balls">
-                    
                 </div>
+            </div>
+        </section>
+        <!--parte do ABout us-->
+        <section class=" default color">
+            <div class="section-title">About Us</div>
+            <div class="section-desc">Nos conheca um pouco mais</div>
+            <div class="section-bodygrid">
+                <div class="section-about-desc">
+                    <div class="bar color"></div>
+                    <h2> Trazendo Alegria por gerações</h2>
+                    <div class="section-about-text">
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source
+                    </div>
+                    <a href="" class="button">Learn More</a>
+                </div>
+                <div class="section-about-img1"></div>
             </div>
         </section>
     </main>
